fixed small bugs with modal layer index and tile visibility, fixed bug where jobs for different sensors werent being initialized properly, more work needs to be done to create data structures for each sensor

--- a/src/assets/css/AreaOfInterestList.css
+++ b/src/assets/css/AreaOfInterestList.css
@@ -8,7 +8,7 @@
 
 .areaOfInterestList > .header {
     padding: 4px;
-    
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -21,7 +21,7 @@
     position: sticky;
     top: 0px;
     width: 100%;
-    z-index: 999;
+    z-index: 1;
 
 }
 
